--- a/style/style.css
+++ b/style/style.css
@@ -598,7 +598,7 @@ nav .menu li a:hover {
           justify-content: center;
   padding: 0;
   margin: 0 auto;
-  background-color: #f5f8fd;
+  background-color: white;
   border-radius: 50px;
   height: 50px;
   -webkit-box-align: center;
@@ -809,5 +809,55 @@ nav .menu li a:hover {
   .footer p {
     margin: 1rem;
   }
+}
+
+.login-page main {
+  padding: 2rem;
+}
+
+.login-page main h1 {
+  color: #173b6c;
+  position: relative;
+  padding: 5px 0;
+  margin: 3rem;
+}
+
+.login-page main h1:after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 3px;
+  background-color: #149ddd;
+  bottom: 0;
+  left: 0;
+  display: block;
+}
+
+.login-page main form {
+  background-color: white;
+  max-width: 600px;
+}
+
+.login-page .manage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
+}
+
+.login-page .manage ul.manage-nav {
+  border: 1px solid #beb4b4;
+  padding: 2rem 1rem;
+  margin-top: 0;
+  margin-left: 0;
+  border-radius: 3px;
+  height: 200px;
+}
+
+.login-page .manage ul.manage-nav li {
+  list-style: none;
+  margin: 1rem auto;
 }
 /*# sourceMappingURL=style.css.map */
