--- a/style/style.sass
+++ b/style/style.sass
@@ -389,7 +389,7 @@ nav
             justify-content: center
             padding: 0
             margin: 0 auto
-            background-color: $color_blue_background
+            background-color: white
             border-radius: 50px
             height: 50px
             align-items: center
@@ -539,3 +539,44 @@ nav
         flex-flow: column
         p
             margin: 1rem
+
+
+// login 
+.login-page
+    main
+        padding: 2rem
+        h1
+            color: $color_title
+            position: relative
+            padding: 5px 0
+            margin: 3rem
+            &:after
+                content: ""
+                position: absolute
+                width: 50px
+                height: 3px
+                background-color: #149ddd
+                bottom: 0
+                left: 0
+                display: block
+        form
+            background-color: white
+            max-width: 600px
+
+    .manage
+        display: flex
+        justify-content: space-around
+        width: 100%
+        ul.manage-nav
+            border: 1px solid #beb4b4
+            padding: 2rem 1rem
+            margin-top: 0 
+            margin-left: 0 
+            border-radius: 3px
+            height: 200px
+            li
+                list-style: none
+                margin: 1rem auto
+
+            
+    
