--- a/style/style.css
+++ b/style/style.css
@@ -842,9 +842,11 @@ nav .menu li a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  justify-items: center;
+  gap: 4rem;
 }
 
 .login-page .manage ul.manage-nav {
@@ -853,11 +855,20 @@ nav .menu li a:hover {
   margin-top: 0;
   margin-left: 0;
   border-radius: 3px;
-  height: 200px;
 }
 
 .login-page .manage ul.manage-nav li {
   list-style: none;
   margin: 1rem auto;
+}
+
+.login-page .manage .contain {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 70%;
+          flex: 0 0 70%;
+}
+
+.login-page .manage .contain form {
+  margin: auto;
 }
 /*# sourceMappingURL=style.css.map */
