--- a/style/style.sass
+++ b/style/style.sass
@@ -565,18 +565,22 @@ nav
 
     .manage
         display: flex
-        justify-content: space-around
-        width: 100%
+        justify-content: space-between
+        justify-items: center
+        gap: 4rem
         ul.manage-nav
             border: 1px solid #beb4b4
             padding: 2rem 1rem
             margin-top: 0 
             margin-left: 0 
             border-radius: 3px
-            height: 200px
             li
                 list-style: none
                 margin: 1rem auto
-
+        .contain
+            flex: 0 0 70%
+            form 
+                margin: auto
+            
             
     
