--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@
   display: block;
 }
 
-.login-page main form {
+.login-page main main {
   background-color: white;
   max-width: 600px;
 }
@@ -57,6 +57,50 @@
 
 .login-page .manage .contain form {
   margin: auto;
+}
+
+.manage-page main {
+  padding: 2rem;
+}
+
+.manage-page .manage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  justify-items: center;
+  gap: 4rem;
+}
+
+.manage-page .manage ul.manage-nav {
+  border: 1px solid #beb4b4;
+  padding: 2rem 1rem;
+  margin-top: 0;
+  margin-left: 0;
+  border-radius: 3px;
+}
+
+.manage-page .manage ul.manage-nav li {
+  list-style: none;
+  margin: 1rem auto;
+}
+
+.manage-page .manage .contain {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 70%;
+          flex: 0 0 70%;
+}
+
+.manage-page .manage .contain form {
+  margin: auto;
+}
+
+.exp-page .container section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 * {
