--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,6 @@
 }
 
 .login-page .manage ul.manage-nav {
-  border: 1px solid #beb4b4;
   padding: 2rem 1rem;
   margin-top: 0;
   margin-left: 0;
@@ -897,6 +896,93 @@ nav .menu li a:hover {
   }
   .footer p {
     margin: 1rem;
+  }
+}
+
+.mmodal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  overflow: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+}
+
+.mmodal .modal-con {
+  height: 40%;
+  width: 40%;
+  margin: auto;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  background-color: #edf8f3;
+  border-radius: 1.5rem;
+  border: 1px solid #dfdbdb;
+}
+
+.mmodal .modal-con section {
+  margin-top: 2rem;
+}
+
+.mmodal .modal-con p {
+  font-size: 1.6rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1;
+          flex: 0 1;
+  margin: 1rem;
+  text-align: center;
+}
+
+@media (max-width: 1500px) {
+  .mmodal .modal-con {
+    width: 60%;
+  }
+  .mmodal .modal-con p {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .mmodal .modal-con {
+    width: 70%;
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .mmodal .modal-con {
+    width: 85%;
+  }
+  .mmodal .modal-con p {
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .mmodal .modal-con {
+    width: 90%;
+    font-size: 1rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
