--- a/style/style.sass
+++ b/style/style.sass
@@ -15,25 +15,25 @@ html, body
 body
     // background-color: #f5f8fd
 
-.container 
+.container
     margin: auto
     padding: 0 15px
     max-width: 1500px
 
-    @media (min-width: 576px) 
-        max-width: 540px;
+    @media (min-width: 576px)
+        max-width: 540px
 
     @media (min-width: 768px)
-        max-width: 720px;
+        max-width: 720px
 
-    @media (min-width: 992px) 
-        max-width: 960px;
+    @media (min-width: 992px)
+        max-width: 960px
 
-    @media (min-width: 1200px) 
-        max-width: 1140px;
+    @media (min-width: 1200px)
+        max-width: 1140px
 
-    @media (min-width: 1440px) 
-        max-width: 1400px;
+    @media (min-width: 1440px)
+        max-width: 1400px
 
 nav
     display: flex
@@ -48,7 +48,7 @@ nav
     z-index: 1
     div
         .logo
-            margin: 0 3rem 
+            margin: 0 3rem
             font-weight: 900
             font-size: 1.5rem
             color: #149ddd
@@ -63,7 +63,7 @@ nav
     .menu
         list-style-type: none
         display: flex
-        margin-right: 3rem 
+        margin-right: 3rem
         margin: auto 3rem
         padding: 0
         font-size: 1.1rem
@@ -85,7 +85,7 @@ nav
     .nav-flex
         display: block
         position: sticky
-        div 
+        div
             display: flex
             justify-content: space-between
             align-items: center
@@ -105,8 +105,8 @@ nav
 
 @media (max-width: 600px)
     .nav-flex
-        div 
-            .logo 
+        div
+            .logo
                 font-size: 1.2rem
 
 .home
@@ -120,7 +120,7 @@ nav
         .intro_myself
             // min-height: 400px
             flex-flow: wrap
-            margin: 3rem 
+            margin: 3rem
             justify-content: center
             h1
                 position: relative
@@ -131,7 +131,7 @@ nav
                 font-weight: bold
                 margin: 1rem
                 font-size: 3rem
-            ul 
+            ul
                 margin: 0
                 padding: 0
                 list-style-type: none
@@ -140,7 +140,7 @@ nav
                     i
                         margin: 1rem
                         font-size: 1.7rem
-        .img  
+        .img
             display: flex
             justify-content: center
             align-items: center
@@ -166,7 +166,7 @@ nav
                     font-size: 4rem
                 h4
                     font-size: 2rem
-                    
+
 @media (max-width: 600px)
     .home
         margin: 0
@@ -182,7 +182,7 @@ nav
                     font-size: 1.5rem
                     margin: 0 .5rem
                     text-align: center
-                ul 
+                ul
                     justify-content: center
                     li
                         i
@@ -310,7 +310,7 @@ nav
                     i
                         font-size: 2rem
 
-.experience-page 
+.experience-page
     min-height: 100vh
     .experience-title
         padding: 3rem
@@ -382,7 +382,7 @@ nav
                 bottom: 0
                 left: 0
                 display: block
-        p 
+        p
             font-weight: bold
             // line-height: 1.2
     .list-menu
@@ -426,7 +426,7 @@ nav
             &:hover .cover
                 opacity: .95
                 transform: scale(1.03)
-            img 
+            img
                 width: 100%
                 height: 100%
                 object-fit: cover
@@ -458,7 +458,7 @@ nav
                 width: 100%
                 height: 100%
                 object-fit: cover
-            
+
         // @for $i from 1 through 8
         //     .grid_#{$i}
         //         grid-area: grid_#{$i}
@@ -492,10 +492,9 @@ nav
                 display: block
         form
             background-color: white
-            max-width: 600px 
-            
+            max-width: 600px
 
-.footer 
+.footer
     background-color: $color_blue_background
     border-top: 1px solid rgba(0, 0, 0, .1)
     display: flex
@@ -510,7 +509,7 @@ nav
             color: rgba(0, 0, 0, .6)
             &:hover
                 color: $color_icon_hover
-    ul 
+    ul
         margin: 0
         padding: 0
         list-style-type: none
@@ -524,9 +523,65 @@ nav
                     color: $color_icon_hover
 
 @media (max-width: 600px)
-    .footer 
+    .footer
         flex-flow: column
         p
             margin: 1rem
 
+.mmodal
+    width: 100%
+    height: 100%
+    position: fixed
+    top: 0
+    left: 0
+    z-index: 1
+    overflow: auto
+    display: flex
+    justify-content: center
+    align-items: center
+    display: none
+    .modal-con
+        height: 40%
+        width: 40%
+        margin: auto
+        background-color: #ffffff
+        display: flex
+        justify-content: space-around
+        align-items: center
+        flex-flow: column
+        background-color: #edf8f3
+        border-radius: 1.5rem
+        border: 1px solid #dfdbdb
+        section
+            margin-top: 2rem
+        p
+            font-size: 1.6rem
+            flex: 0 1
+            margin: 1rem
+            text-align: center
 
+@media (max-width: 1500px)
+    .mmodal
+        .modal-con
+            width: 60%
+            p
+                font-size: 1.6rem
+
+@media (max-width: 1000px)
+    .mmodal
+        .modal-con
+            width: 70%
+            font-size: 1.4rem
+
+@media (max-width: 800px)
+    .mmodal
+        .modal-con
+            width: 85%
+            p
+                font-size: 1.25rem
+
+@media (max-width: 700px)
+    .mmodal
+        .modal-con
+            width: 90%
+            font-size: 1rem
